--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .test {
+            width: 500px;
+            height: 500px;
+            border: 4px solid green;
+        }
+        body {
+            min-height: 100vh;
+            background-color: honeydew;
+        }
+    </style>
 </head>
 <body>
     <h2>Hello world</h2>
     <p>Check</p>
+   <div class="test">
+
+   </div>
 </body>
 </html>
