--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
         .test {
             width: 500px;
             height: 500px;
-            border: 4px solid green;
+            background-color: #000;
         }
         body {
-            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             background-color: honeydew;
         }
     </style>
 </head>
 <body>
-    <h2>Hello world</h2>
-    <p>Check</p>
-   <div class="test">
+     <div class="test">
 
    </div>
 </body>
