--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
             height: 500px;
             background-color: #000;
         }
+
         body {
             display: flex;
             flex-direction: column;
@@ -20,9 +22,13 @@
         }
     </style>
 </head>
-<body>
-     <div class="test">
 
-   </div>
+<body>
+    <div class="test">
+
+
+    </div>
+    <div class="test"></div>
 </body>
+
 </html>
