add hello world

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <centre>
+        <h2><font color=black>Hello World</font></h2>
+    </centre>
     <style>
         .test {
-            width: 500px;
-            height: 500px;
+            width: 300px;
+            height: 300px;
             background-color: #000;
         }
 
