--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <centre>
         <h2><font color=black>Hello World</font></h2>
+        <h2><font color=red>Hello World</font></h2>
     </centre>
     <style>
         .test {
